--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body {
   text-underline-offset: 5px;
 }
 
-/* СЕКЦИЯ "COVER".
+/* СЕКЦИЯ COVER.
 (картинка, подложка, заголовок, подзаголовок, кнопка) */
 .cover {
   position: relative;
