--- a/styles/style.css
+++ b/styles/style.css
@@ -276,7 +276,7 @@ body {
 .card__text {
   width: 350px; 
   margin-bottom: 50px;
-  color: #FFF;
+  color: #fff;
   font-family: Raleway;
   font-weight: 400;
   font-size: 20px;
